Fix alignment issue

--- a/assets/styles/blogs.scss
+++ b/assets/styles/blogs.scss
@@ -9,7 +9,6 @@
         .blogs__item__text {
             display: inline-block;
             vertical-align: top;
-            margin-left: $spacing-one-third;
 
             h2 {
                 margin-top: $spacing-one-third / 2;
